[tool.poetry]
name = "flask-http-client"
version = "0.1.1"
description = ""
authors = ["codeif <me@codeif.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
