[tool.poetry]
name = "flask-http-client"
version = "0.1.6"
description = ""
authors = ["codeif <me@codeif.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.isort]
profile = "black"
float_to_top = true

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
